fix scrollbar appearing before header animation

--- a/styles.css
+++ b/styles.css
@@ -50,29 +50,42 @@
   }
 }
 @keyframes f-animate {
-  from {
-    right: -21vw;
+  0% {
+    right: 0vw;
+    opacity: 0%;
   }
-  to {
+  10% {
+    opacity: 100%;
+  }
+  100% {
+    opacity: 100%;
+
     right: 10vw;
   }
 }
 @keyframes m-animate {
-  from {
-    left: -21vw;
+  0% {
+    left: 0vw;
+    opacity: 0%;
   }
-  to {
+  30% {
+    opacity: 100%;
+  }
+  100% {
     left: 10vw;
+    opacity: 100%;
   }
 }
 .icon-1 {
+  opacity: 0%;
   bottom: 15vh;
-  right: -21vw;
+  right: 0vw;
   animation: forwards f-animate 1s 2.5s;
 }
 .icon-2 {
+  opacity: 0%;
   top: 10vh;
-  left: -21vw;
+  left: 0vw;
   animation: forwards m-animate 1s 2s;
 }
 html,
